erDiagram
    unidades {
        UUID id PK
        VARCHAR nome
        TIMESTAMP created_at
    }

    usuarios {
        UUID id PK
        UUID unidade_id FK
        VARCHAR nome
        VARCHAR email
        TEXT senha
        BOOLEAN ativo_pontos
        NUMERIC pontos
        TEXT role
    }

    movimentacao_pontos {
        UUID id PK
        UUID unidade_id FK
        UUID usuario_id FK
        INTEGER pontos
        VARCHAR tipo_transacao
        TEXT descricao
        TIMESTAMP created_at
    }

    estoque {
        UUID id PK
        UUID unidade_id FK
        VARCHAR nome
        VARCHAR unidade_de_medida
        NUMERIC estoque_atual
        NUMERIC estoque_minimo
        TIMESTAMP created_at
    }

    movimentacao_estoque {
        UUID id PK
        UUID unidade_id FK
        UUID estoque_item_id FK
        VARCHAR nome
        VARCHAR tipo
        NUMERIC quantidade
        TIMESTAMP created_at
    }

    cardapio_produtos {
        UUID id PK
        UUID unidade_id FK
        VARCHAR nome
        TEXT descricao
        BOOLEAN ativo
        NUMERIC preco
        TIMESTAMP created_at
    }

    receita_produtos {
        UUID id PK
        UUID produto_cardapio_id FK
        UUID estoque_item_id FK
        NUMERIC quantidade
        TIMESTAMP created_at
    }

    pedidos {
        UUID id PK
        UUID unidade_id FK
        NUMERIC total
        VARCHAR canal_pedido
        VARCHAR forma_pagamento
        VARCHAR status
        TIMESTAMP created_at
    }

    pedido_itens {
        UUID id PK
        UUID pedido_id FK
        UUID produto_cardapio_id FK
        INTEGER quantidade
        NUMERIC preco_unidade
        NUMERIC subtotal
    }

    pagamentos {
        UUID id PK
        UUID pedido_id FK
        UUID unidade_id FK
        VARCHAR metodo_pagamento
        NUMERIC valor
        VARCHAR status
        TIMESTAMP created_at
    }

    cupons {
        UUID id PK
        UUID unidade_id FK
        VARCHAR codigo
        VARCHAR nome
        TEXT descricao
        BOOLEAN publico
        VARCHAR tipo
        NUMERIC valor
        NUMERIC valor_minimo_pedido
        TIMESTAMP inicia_em
        TIMESTAMP expira_em
        INTEGER max_usos
        INTEGER usos_atuais
        BOOLEAN ativo
        TIMESTAMP created_at
    }

    cupons_privados {
        UUID id PK
        UUID unidade_id FK
        UUID usuario_id FK
        UUID cupom_id FK
        TIMESTAMP usado_em
        VARCHAR status
        TIMESTAMP atribuido_em
    }

    %% Relacionamentos com Unidades (Tenant de Isolamento)
    unidades ||--o{ usuarios : "possui"
    unidades ||--o{ movimentacao_pontos : "gerencia"
    unidades ||--o{ estoque : "controla"
    unidades ||--o{ movimentacao_estoque : "audita"
    unidades ||--o{ cardapio_produtos : "disponibiliza"
    unidades ||--o{ pedidos : "processa"
    unidades ||--o{ pagamentos : "recebe"
    unidades ||--o{ cupons : "emite"
    unidades ||--o{ cupons_privados : "valida"

    %% Relacionamentos de Negócio / Tabelas Pivot
    usuarios ||--o{ movimentacao_pontos : "acumula/gasta"
    usuarios ||--o{ cupons_privados : "recebe"
    
    estoque ||--o{ movimentacao_estoque : "sofre"
    estoque ||--o{ receita_produtos : "compoe"
    cardapio_produtos ||--o{ receita_produtos : "necessita"
    
    pedidos ||--o{ pedido_itens : "contem"
    cardapio_produtos ||--o{ pedido_itens : "incluido_em"
    pedidos ||--|| pagamentos : "origina"
    cupons ||--o{ cupons_privados : "gera"